QuoteEngine/force-app/main/default/objects/Quote_Line__c/Quote_Line__c.object-meta.xml
<CustomObject>
    <label>Quote Line</label>
    <pluralLabel>Quote Lines</pluralLabel>
    <nameField>
        <label>Line Number</label>
        <type>AutoNumber</type>
        <displayFormat>QL-{00000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>