QuoteEngine/force-app/main/default/objects/Quote_Line__c/fields/Bundle__c.field-meta.xml
<CustomField>
    <fullName>Bundle__c</fullName>
    <label>Bundle</label>
    <type>Lookup</type>
    <referenceTo>Bundle__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>