QuoteEngine/force-app/main/default/objects/Quote_Line__c/fields/Line_Name__c.field-meta.xml
<CustomField>
    <fullName>Line_Name__c</fullName>
    <label>Line Name</label>
    <type>Text</type>
    <length>180</length>
    <description>Snapshot of the product or bundle name at the time it was added to the quote.</description>
</CustomField>