QuoteEngine/force-app/main/default/objects/Quote_Line__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>Quote</label>
    <type>MasterDetail</type>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
</CustomField>